<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar">
    </include>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pilih_jabatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jabatan"
            android:textSize="15sp" />

        <Spinner

            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:id="@+id/pilih_provinsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provinsi"
            android:textSize="15sp" />

        <Spinner

            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

        <TextView
            android:id="@+id/pilih_kabupaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kabupaten"
            android:textSize="15sp"
            />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:id="@+id/pilih_kecamatan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kecamatan"
            android:textSize="15sp"
            />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:id="@+id/pilih_kelurahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kelurahan"
            android:textSize="15sp"
            />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>



    </LinearLayout>


</RelativeLayout>
